# wgpu-examples

./: Cargo.toml
.cargo/: config.toml
src/: app.rs  gpu_pipeline.rs  lib.rs  main.rs  shader.wgsl  vertices.rs  window.rs
src/art/: mod.rs  temp.rs  vertex.rs
src/art/cube/: cube.rs  shader.wgsl
src/art/sphere/: shader.wgsl  sphere.rs
src/art/water_surface/: mod.rs  shader.wgsl  water_surface.rs
src/art/waves/: shader.wgsl  waves.rs
