[package]
name = "graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "29.0"
pollster = "0.3"
bytemuck = { version = "1.24.0", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
cgmath = "0.18"
rand = "0.10.1"
